saint-lascivious.github.io: update index, random url discovery
Changes to be committed:
 - modified:   .formatted/index.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   index.html
 - deleted:    resources/javascript/.formatted/random_phrase.min.js
 - new file:   resources/javascript/.formatted/random_url.min.js
 - deleted:    resources/javascript/random_phrase.min.js
 - new file:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -88,8 +88,8 @@
     <script type="text/javascript" src="resources/javascript/console_wrapper.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/random_phrase.min.js">
-    <script type="text/javascript" src="resources/javascript/random_phrase.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/random_url.min.js">
+    <script type="text/javascript" src="resources/javascript/random_url.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
@@ -145,8 +145,8 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <div class="sainternet-catchphrase">
-              <i id="sainternet-phrases">…breaking the Internet, since 2016.</i>
+            <div class="sainternet-highlights">
+              <span id="sainternet-urls">…breaking the Internet, since 2016.</span>
             </div>
           </div>
         </div>
