--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -112,6 +112,7 @@
 
     <link rel="manifest" href="sainternet.webmanifest">
 
+    <link rel="dns-prefetch" href="bulbapedia.bulbgarden.net">
     <link rel="dns-prefetch" href="pi-hole.net">
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -169,13 +170,17 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Une Pokédex, S'il Vous Plaît</span></h3>
             <p class="embiggen" id="datetime">
-              Tuesday, 11 April 2023 01:00+12:00 (NZST)
+              Tuesday, 11 April 2023 01:00+12:00 (NZST)<br>updated on Wednesday, 12 April 2023 00:00+12:00 (NZST)
             </p>
             <p>
-              Pokémon Name to National Pokédex Number queries using <a href="pokedexoverdns.html">Pokédex over DNS</a> now support multiple languages. English/US, Japanese (roomaji), French and German.
+              Pokémon Name to <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN) queries using <code>dns.sainternet.xyz</code> <a href="filtereddns.html">Filtered DNS</a> <a href="pokedexoverdns.html">Pokédex over DNS</a> now support multiple languages. English (US), Japanese (roomaji), French and German.
             </p>
             <p>
-              The following examples show US, JP, FR and DE lookups respectively.
+              NPN to Pokémon Name queries now give a response featuring all supported languages in the following format.
+            </p>
+            <pre>"US: pokemonname, JP: pokemonname, FR: pokemonname, DE: pokemonname"</pre>
+            <p>
+              The following examples show lookups using US, JP, FR and DE Pokémon Names respectively.
             </p>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
