saint-lascivious.github.io: embiggen url pool, formatting
Changes to be committed:
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/reportaproblem.html
 - modified:   portsandprotocols.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js

--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -160,7 +160,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Report a Problem</span></h3>
             <p>
-              The following describes various ways in which you can help <b>sainternet.xyz</b> improve.
+              The following sections describe various ways in which adding your voice can help <code>dns.sainternet.xyz</code> and, or <code>sainternet.xyz</code> improve.
             </p>
            </div>
         </div>
@@ -169,10 +169,10 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Bug Report</span></h3>
             <p>
-              Found a bug on <b>sainternet.xyz</b>?
+              Found a bug on <code>sainternet.xyz</code>?
             </p>
             <p>
-              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <b>sainternet.xyz</b> improve.
+              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <code>sainternet.xyz</code> improve.
             </p>
            </div>
         </div>
