--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -168,33 +168,33 @@
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
-                <td>dns.sainternet.xyz</td>
-                <td>TCP 443</td>
+                <td><code>dns.sainternet.xyz</code></td>
+                <td>TCP <code>443</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
-                <td>dns.sainternet.xyz</td>
-                <td>UDP 443</td>
+                <td><code>dns.sainternet.xyz</code></td>
+                <td>UDP <code>443</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                <td>119.224.127.171<br>::ffff:119.224.127.171<br>::ffff:77e0:7fab</td>
-                <td>TCP 53</td>
+                <td><code>119.224.127.171</code><br><code>::ffff:119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
+                <td>TCP <code>53</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
-                <td>dns.sainternet.xyz</td>
-                <td>TCP 853</td>
+                <td><code>dns.sainternet.xyz</code></td>
+                <td>TCP <code>853</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                <td>119.224.127.171<br>::ffff:119.224.127.171<br>::ffff:77e0:7fab</td>
-                <td>UDP 53</td>
+                <td><code>119.224.127.171</code><br><code>::ffff:119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
+                <td>UDP <code>53</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
-                <td>dns.sainternet.xyz</td>
-                <td>UDP 853</td>
+                <td><code>dns.sainternet.xyz</code></td>
+                <td>UDP <code>853</code></td>
               </tr>
             </table>
            </div>
