saint-lascivious.github.io: formatting, connecttosainternet
Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   connecttosainternet.html

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -71,6 +71,8 @@
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
+    <link rel="preload" as="style" href="resources/google/css/robotomono.min.css">
+    <link href="resources/google/css/robotomono.min.css" rel="stylesheet">
     <link rel="preload" as="style" href="resources/google/css/materialicons.min.css">
     <link href="resources/google/css/materialicons.min.css" rel="stylesheet">
 
@@ -167,17 +169,17 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android<br>Private DNS</span></h3>
+            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon>&nbsp;<span class="embiggen">Android<br>Private DNS</span></h3>
             <p align="center">
               Android 9 (Pie) or higher required.
             </p>
             <ol>
-              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
-              <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
+              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
+              <li>Search&nbsp;<icon class="fa-solid fa-magnifying-glass"></icon></li>
               <li>Search for "Private DNS"</li>
               <li>Select "Private DNS"</li>
               <li>Select "Designated Private DNS"</li>
-              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Done</li>
             </ol>
            </div>
@@ -185,7 +187,7 @@
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
+            <h3><icon class="fa-brands fa-apple"></icon>&nbsp;<span class="embiggen">Apple<br>iOS/macOS</span></h3>
             <p align="center">
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
@@ -229,14 +231,14 @@
         <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
+            <h3><icon class="fa-brands fa-chrome"></icon>&nbsp;<span class="embiggen">Google<br>Chrome/Chromium</span></h3>
             <ol>
-              <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
-              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Overflow Menu&nbsp;<icon class="fa-solid fa-ellipsis-vertical"></icon></li>
+              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
               <li>Select "Privacy and security"</li>
               <li>Select "Use secure DNS"</li>
               <li>Select "Choose another provider"</li>
-              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Done</li>
             </ol>
            </div>
@@ -244,17 +246,17 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla<br>Firefox</span></h3>
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;<span class="embiggen">Mozilla<br>Firefox</span></h3>
             <ol>
-              <li>Menu <icon class="fa-solid fa-bars"></icon></li>
-              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Menu&nbsp;<icon class="fa-solid fa-bars"></icon></li>
+              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
               <li>Select "General"</li>
               <li>Select "Network Settings"</li>
               <li>Select "Settings"</li>
               <li>Select "Enable DNS over HTTPS"</li>
               <li>Select "Use Provider"</li>
               <li>Select "Custom"</li>
-              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
+              <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Select "OK"</li>
               <li>Done</li>
             </ol>
