saint-lascivious.github.io: mono formatting, bump service worker
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   reportaproblem.html
 - modified:   serviceworker.min.js
 - modified:   technologies.html

--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -66,11 +66,15 @@
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/table.min.css">
     <link rel="stylesheet" href="resources/stylesheets/table.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/mono.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
+    <link rel="preload" as="style" href="resources/google/css/robotomono.min.css">
+    <link href="resources/google/css/robotomono.min.css" rel="stylesheet">
     <link rel="preload" as="style" href="resources/google/css/materialicons.min.css">
     <link href="resources/google/css/materialicons.min.css" rel="stylesheet">
 
@@ -87,6 +91,8 @@
     <script type="text/javascript" src="resources/javascript/console_wrapper.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/load_mono_fonts.min.js">
+    <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
