--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -146,7 +146,10 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-highlights">
-              <span id="sainternet-urls">…breaking the Internet, since 2016.</span>
+              <span id="sainternet-urls"><a href="newsandupdates.html#newsandupdates">News and Updates</a></span>
+              <span class="mdl-tooltip mdl-tooltip--top" for="sainternet-urls">
+                Random sainternet.xyz URL
+              </span>
             </div>
           </div>
         </div>
