--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -164,14 +164,14 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
-            <p align="center" class="embiggen">
+            <p align="center">
               <b>Who?</b>
             </p>
               Sainternet is chiefly managed by myself, saint (aka. Hayden Pearce), but would not be possible without contributions from my Chief Analyst/Technician (CAT) Tiggy, and the invaluable oversight of my Knowledge/Information Technologist in charge of Testing Immersive Experiences (KITTIE), Willow.
             <p>
             </p>
             <hr>
-            <p align="center" class="embiggen">
+            <p align="center">
               <b>What?</b>
             </p>
             <p>
@@ -185,21 +185,21 @@
               <li>Here "zero logging policy" refers to a self enforced policy whereby any/all logging of relevant services (those involved with processing some or all of a Sainternet DNS query and its response) are either disabled entirely, or set to their minimum possible verbosity and redirected to "/dev/null".</li>
             </ol>
             <hr>
-            <p align="center" class="embiggen">
+            <p align="center">
               <b>When?</b>
             </p>
             <p>
               Sainternet research resolvers or their spiritual ancestors have been operating in some capacity or other since 2016.
             </p>
             <hr>
-            <p align="center" class="embiggen">
+            <p align="center">
               <b>Where?</b>
             </p>
             <p>
               Sainternet is based in Christchurch, New Zealand.
             </p>
             <hr>
-            <p align="center" class="embiggen">
+            <p align="center">
               <b>Why?</b>
             </p>
             <p>
