--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -173,7 +173,10 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">De<s>ar</s>v Diary: Going Offline</span></h3>
             <p class="embiggen" id="datetime">
-              Friday, 14 April 2023 22:30+12:00 (NZST)
+              first posted on Friday, 14 April 2023 22:30+12:00 (NZST)<br>updated on Saturday, 15 April 2023 21:30+12:00 (NZST)
+            </p>
+            <p align="center">
+              <b>Going Offline</b>
             </p>
             <p>
               <code>sainternet.xyz</code> is going offline.
@@ -182,10 +185,19 @@
               Sorry. Rather, <code>sainternet.xyz</code> <i>can</i> go offline, and it isn't a problem. Let me explain.
             </p>
             <p>
-              Historically, handling offline in a website or progressive web application was hard, with each service deploying their own workarounds or even just choosing not to handle the case at all. Enter the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API">Service Worker API</a>. Service workers give developers the tools they need to create effective offline experiences.
+              Historically, handling offline in a website or progressive web application was hard, with each service deploying their own workarounds or even just choosing not to handle the case at all.
+            </p>
+            <p align="center">
+              <b>At Your Service</b>
+            </p>
+            <p>
+              Enter the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API">Service Worker API</a>. Service workers give developers the tools they need to create effective offline experiences.
             </p>
             <p>
               Using a service worker allows for the interception of requests within the service worker's scope, which can then be acted on accordingly. For instance <code>sainternet.xyz</code>'s <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/blob/master/.formatted/serviceworker.min.js">service worker</a> uses both network first and cache first fetch policies depending upon the asset being requested. Objects that are likely to be static (fonts, images, etc.) or change infrequently are fetched by checking the cache first, falling back to network (if available) if the object is not found in the current cache. Dynamic or otherwise frequently updated objects are fetched from network first (if available), falling back to cache if the network request fails. Successful fetches from either case are added to the cache for later use.
+            </p>
+            <p align="center">
+              <b>Putting It All Together</b>
             </p>
             <p>
               After visiting any page on this site, if you're running an even vaguely modern browser and have JavaScript enabled, some magic should have happened.
@@ -200,7 +212,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Une Pokédex, S'il Vous Plaît</span></h3>
             <p class="embiggen" id="datetime">
-              Tuesday, 11 April 2023 01:00+12:00 (NZST)<br>updated on Wednesday, 12 April 2023 00:00+12:00 (NZST)
+              first posted on Tuesday, 11 April 2023 01:00+12:00 (NZST)<br>updated on Wednesday, 12 April 2023 00:00+12:00 (NZST)
             </p>
             <p>
               Pokémon Name to <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN) queries using <code>dns.sainternet.xyz</code> <a href="filtereddns.html">Filtered DNS</a> <a href="pokedexoverdns.html">Pokédex over DNS</a> now support multiple languages. English (US), Japanese (roomaji), French and German.
