--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -35,14 +35,15 @@
 
     <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'">
 
-    <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
+    <link rel="icon" href="favicon.ico">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/android-chrome-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="resources/icons/android-chrome-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="resources/icons/android-chrome-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="resources/icons/android-chrome-128x128.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="resources/icons/android-chrome-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
     <link rel="mask-icon" href="resources/icons/safari-pinned-tab.svg" color="#f44336">
