saint-lascivious.github.io: defer analytics
 - defer tag manager
   tag manager is now deferred
   not only is it deferred, it is the last js script to execute

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - renamed:    resources/fontawesome-free-6.4.0-web/css/brands.css -> resources/fontawesome-free-6.4.0-web/css/.formatted/brands.min.css
 - renamed:    resources/fontawesome-free-6.4.0-web/css/fontawesome.css -> resources/fontawesome-free-6.4.0-web/css/.formatted/fontawesome.min.css
 - renamed:    resources/fontawesome-free-6.4.0-web/css/solid.css -> resources/fontawesome-free-6.4.0-web/css/.formatted/solid.min.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -54,11 +54,6 @@
 
     <link rel="canonical" href="https://sainternet.xyz/projects.html">
 
-    <link rel="dns-prefetch" href="www.googletagmanager.com">
-    <link rel="preconnect" href="https://www.googletagmanager.com">
-    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
-    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
-
     <link rel="preload" as="style" href="resources/stylesheets/material.deep_purple-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.deep_purple-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
@@ -90,6 +85,11 @@
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
     <script type="text/javascript" src="sainternet.min.js" defer></script>
+
+    <link rel="dns-prefetch" href="www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
+    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" defer></script>
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
