--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -57,11 +57,6 @@
     <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" media="(prefers-color-scheme: light)" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)" fetchpriority="high">
 
-    <link rel="dns-prefetch" href="www.googletagmanager.com">
-    <link rel="preconnect" href="https://www.googletagmanager.com">
-    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
-    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
-
     <link rel="preload" as="style" href="resources/stylesheets/material.cyan-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.cyan-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
@@ -101,6 +96,11 @@
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
     <script type="text/javascript" src="sainternet.min.js" defer></script>
+
+    <link rel="dns-prefetch" href="www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
+    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" defer></script>
 
     <link rel="prefetch" href="265.html" as="document">
     <link rel="prerender" href="265.html">
