--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -56,11 +56,6 @@
 
     <link rel="preload" as="image" href="resources/images/terminal.webp" type="image/webp" fetchpriority="high">
 
-    <link rel="dns-prefetch" href="www.googletagmanager.com">
-    <link rel="preconnect" href="https://www.googletagmanager.com">
-    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
-    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
-
     <link rel="preload" as="style" href="resources/stylesheets/material.indigo-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.indigo-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
@@ -100,6 +95,11 @@
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
     <script type="text/javascript" src="sainternet.min.js" defer></script>
+
+    <link rel="dns-prefetch" href="www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
+    <script type="text/javascript" src="resources/javascript/tag_manager.min.js" defer></script>
 
     <link rel="prefetch" href="265.html" as="document">
     <link rel="prerender" href="265.html">
