saint-lascivious.github.io: declare .ico sizes/type, w/ fallback
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -35,7 +35,8 @@
 
     <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" sizes="16x16 24x24 32x32 64x64" href="resources/icons/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="24x24" href="resources/icons/favicon/favicon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon/favicon-32x32.png">
