--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -35,7 +35,8 @@
 
     <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" sizes="16x16 24x24 32x32 64x64" href="resources/icons/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="24x24" href="resources/icons/favicon/favicon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon/favicon-32x32.png">
