saint-lascivious.github.io: sainternet-urls is effectively noscript
 - abuse this and point at newsandupdates.html#enablejavascript

Changes to be committed:
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   index.html
 - modified:   newsandupdates.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -149,9 +149,9 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-highlights">
-              <span id="sainternet-urls"><a href="newsandupdates.html#newsandupdates">News and Updates</a></span>
+              <span id="sainternet-urls"><a href="newsandupdates.html#enablejavascript">Enable JavaScript</a></span>
               <span class="mdl-tooltip mdl-tooltip--top" for="sainternet-urls">
-                Random sainternet.xyz URL
+                Explore sainternet.xyz with this random URL
               </span>
             </div>
           </div>
