--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -158,7 +158,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#devdiarygoingoffline"><b>De<s>ar</s>v Diary: Going Offline</b></a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="#2022metrics">2022 Metrics</a>, <a class="embiggen" href="#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a>, <a class="embiggen" href="#reportingproblems">Reporting Problems</a>, <a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#enablejavascript"><b>Enable JavaScript</b></a>, <a class="embiggen" href="#devdiarygoingoffline">De<s>ar</s>v Diary: Going Offline</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="#2022metrics">2022 Metrics</a>, <a class="embiggen" href="#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a>, <a class="embiggen" href="#reportingproblems">Reporting Problems</a>, <a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
@@ -168,6 +168,20 @@
             <h3><span class="embiggen">News and Updates</span></h3>
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
+            </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="enablejavascript">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Enable JavaScript</span></h3>
+            <p class="embiggen" id="datetime">
+              first posted on Tuesday, 25 April 2023 01:15+12:00 (NZST)
+            </p>
+              <code>sainternet.xyz</code> leans on JavaScript fairly heavily for function and performance.
+            </p>
+            <p>
+              Consider allowing JavaScript to run on <code>sainternet.xyz</code> for the best experience.
             </p>
            </div>
         </div>
