saint-lascivious.github.io: fix (?) intricate prefetch/preload
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/newsandupdates.html
 - modified:   archive.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -101,10 +101,8 @@
     <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" defer></script>
 
-    <link rel="prefetch" href="projects.html" as="document">
-    <link rel="prerender" href="projects.html">
-    <link rel="prefetch" href="reportaproblem.html" as="document">
-    <link rel="prerender" href="reportaproblem.html">
+    <link rel="prefetch" href="archive.html" as="document">
+    <link rel="prerender" href="archive.html">
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
