--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -108,6 +108,8 @@
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
+    <link rel="prefetch" href="newsandupdates.html" as="document">
+    <link rel="prerender" href="newsandupdates.html">
     <link rel="prefetch" href="filtereddns.html" as="document">
     <link rel="prerender" href="filtereddns.html">
     <link rel="prefetch" href="pokedexoverdns.html" as="document">
