saint-lascivious.github.io: drawer submenu formatting
 - use nonbreaking spaces in drawer submenu indentation
   prevent submenu link indentation from getting squished
   aggressive minification was squashing whitespace inside tags
 - use fa-solid fa-caret-right in place of '-' for indentation
 - bump service worker version to v0.1.0

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   .github/workflows/sitemap-generation.yml
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   portsandprotocols.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/.formatted/ribbons.min.css
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -152,7 +152,7 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b> - Pokémon #404</b></a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Pokémon #404</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
           <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
