--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -148,12 +148,12 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="technologies.html"> - Technologies</a>
-          <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
+          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
+          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
