saint-lascivious.github.io: fix a couple of strays
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   archive.html
 - modified:   newsandupdates.html
 - modified:   serviceworker.min.js

--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -149,7 +149,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="newsandupdates.html"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Archived Posts</b></a>
+          <a class="embiggen mdl-navigation__link" href="#archivedposts"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Archived Posts</b></a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
