--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -145,6 +145,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
+          <a class="embiggen mdl-navigation__link" href="archive.html"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Archived Posts</b></a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
